<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_camera">

    <fragment
        android:id="@+id/nav_camera"
        android:name="com.sun.android.bai9_Navigation.CameraFragment"
        android:label="@string/camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.sun.android.bai9_Navigation.GalleryFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_gallery2" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sun.android.bai9_Navigation.SlideshowFragment"
        android:label="@string/slideshow"
        tools:layout="@layout/fragment_slideshow2" />

    <fragment
        android:id="@+id/nav_manage"
        android:name="com.sun.android.bai9_Navigation.ManageFragment"
        android:label="@string/tools"
        tools:layout="@layout/fragment_manage" />
</navigation>
